White space bugs cleared

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ html{
     font-size: 1rem;
     animation-name: rise;
     animation-duration: 9s;
+    white-space: nowrap;
 }
 .hero a:hover{
     color: black;
